--- a/TallerMecanico/Views/Shared/_Layout.cshtml
+++ b/TallerMecanico/Views/Shared/_Layout.cshtml
@@ -68,6 +68,20 @@
             &copy; 2023 - Taller Mecánico Ensigna - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
     </footer>
+    <script>
+        $(document).ready(function () {
+            $("#exportToExcel").click(function () {
+                $.ajax({
+                    type: "GET",
+                    url: "/Usuario/ExportarExcel",
+                    success: function (result) {
+                        window.location = result;
+                    }
+                });
+            });
+        });
+    </script>
+
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
