--- a/TallerMecanico/Views/Usuario/Index.cshtml
+++ b/TallerMecanico/Views/Usuario/Index.cshtml
@@ -63,6 +63,11 @@
                     }
                 </tbody>
             </table>
+            <div>
+                <button id="exportToExcel" class="btn btn-primary">Exportar a Excel</button>
+            </div>
+
+
         </div>
     </div>
 }
